added account drill down

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
+.modal {
+    backdrop-filter: blur(15px);
+  }
