--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,8 @@
   position: fixed;
   transition-duration: 300ms;
   --tw-bg-opacity: 1;
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
+  background: linear-gradient(90deg, rgba(45,115,92,1) 32%, rgba(200,200,200,1) 83%);
   height: 100%;
   padding: 1.25rem;
   padding-top: 1.25rem/* 20px */;
